[package]
name = "swapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = "3.4.0"
sp-core = "20.0.0"
sp-keyring = "23.0.0"
sp-runtime = "23.0.0"
subxt = "0.28.0"
tokio = {version = "1.28.0", features = ["rt-multi-thread","macros"]}
